src/test/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-self-is-anon.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex1-return-one-existing-name-self-is-anon.rs:8:30
   |
LL |     fn foo<'a>(&self, x: &'a Foo) -> &'a Foo {
   |                -----                 -------
   |                |
   |                this parameter and the return type are declared with different lifetimes...
LL | 
LL |         if true { x } else { self }
   |                              ^^^^ ...but data from `self` is returned here

error: aborting due to previous error

